changed home css & html (added bg image)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div id="logo-container">
-            <img id="restaurant_logo" src="/images/OK2WEZ0.jpg" alt="Restaurant Logo" height="40px"> <!-- Restaurant Logo im Ordner "images " hochladen und anschließend die source hier einfügen -->
+            <img id="restaurant_logo" src="/images/logo_hier_einfuegen.png" alt="Restaurant Logo" height="40px"> <!-- Restaurant Logo im Ordner "images " hochladen und anschließend die source hier einfügen -->
             <h1 id="restaurant_titel">Restaurant Name</h1> <!-- Der Name ihrer Gastronomie hier eingeben -->
         </div>
         <div class="nav_btns">
@@ -27,5 +27,8 @@
             <a href="/pages/lieferservice.html"><button id="lieferservice_btn">Lieferservice</button></a>
         </div>
     </nav>
+    <main>
+        <img id="bild_gross_home" src="/images/hintergrund_gross_home.jpg" alt="Hintergrundbild">
+    </main>
 </body>
 </html>
