--- a/index.html
+++ b/index.html
@@ -42,9 +42,18 @@
         </div>
     </nav>
 
-    <main class="vh-100">
-        <div id="bg" class="h-100 w-100"></div>
-    </main>
+    <main class="vh-100 position-relative d-flex align-items-center justify-content-center">
+        <!-- Hintergrundbild -->
+        <div id="bg" class="h-100 w-100 position-absolute top-0 start-0"></div>
+        
+        <!-- Zentraler Inhalt -->
+        <div class="content position-relative text-center text-light">
+            <img src="/images/logo_hier_einfuegen.png" alt="Restaurant Logo" class="logo mx-auto d-block mb-3" height="100vh">
+            <h1>Restaurant Name</h1>
+            <p>Erleben Sie unsere kulinarischen Köstlichkeiten.</p>
+            <button class="btn btn-outline-warning" href="/pages/speisekarte.html">Unsere Speisekarte</button>
+        </div>
+    </main>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
