changed button style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="/images/logo_hier_einfuegen.png" alt="Restaurant Logo" class="logo mx-auto d-block mb-3" height="100vh">
             <h1>Restaurant Name</h1>
             <p>Erleben Sie unsere kulinarischen Köstlichkeiten.</p>
-            <button class="btn btn-outline-warning" href="/pages/speisekarte.html">Unsere Speisekarte</button>
+            <a href="/pages/speisekarte.html" class="btn btn-outline-warning" role="button">Unsere Speisekarte</a>
         </div>
     </main>    
 
