--- a/pages/ueberuns.html
+++ b/pages/ueberuns.html
@@ -1,21 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Schriftarten -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+
+    <!-- Meta-Daten -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/view/nav.css">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Eigenes CSS -->
+    <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/ueberuns.css">
     <title>Über uns</title>
 </head>
 <body>
-    <nav>
-        <strong>Logo hier</strong>
-        <div class="nav_btns">
-            <a href="/index.html"><button id="home_btn">Home</button></a>
-            <a href="/pages/speisekarte.html"><button id="speisekarte_btn">Speisekarte</button></a>
-            <a href="/pages/ueberuns.html"><button id="ueberuns_btn">Über uns</button></a>
-            <a href="/pages/kontakt.html"><button id="kontakt_btn">Kontakt</button></a>
-            <a href="/pages/lieferservice.html"><button id="lieferservice_btn">Lieferservice</button></a>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <!-- Logo und Titel -->
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img id="restaurant_logo" src="/images/logo_hier_einfuegen.png" alt="Restaurant Logo" height="40" class="me-2">
+                <span id="restaurant_titel" class="text-warning">Restaurant Name</span>
+            </a>
+            <!-- Nav Hamburger für mobile geräte -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link text-warning" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-warning" href="/pages/speisekarte.html">Speisekarte</a></li>
+                    <li class="nav-item"><a class="nav-link text-warning" href="/pages/ueberuns.html">Über uns</a></li>
+                    <li class="nav-item"><a class="nav-link text-warning" href="/pages/kontakt.html">Kontakt</a></li>
+                    <li class="nav-item"><a class="nav-link text-warning" href="/pages/lieferservice.html">Lieferservice</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
+
+    <main class="d-flex align-items-center justify-content-center vh-100 position-relative">
+        <!-- Hintergrundbild -->
+        <div id="bg" class="h-100 w-100 position-absolute top-0 start-0"></div>
+
+        <!-- Über uns Inhalt -->
+        <div class="about-card position-relative text-center text-light">
+            <h1 class="text-warning mb-4">Über uns</h1>
+            <p>Willkommen bei unserem Restaurant! Hier servieren wir nicht nur köstliches Essen, sondern schaffen auch unvergessliche Momente. Mit viel Leidenschaft und den besten Zutaten bereiten wir unsere Speisen für Sie zu.</p>
+            <div class="row mt-4">
+                <div class="col-md-6 mb-3">
+                    <h2 class="text-warning">Unsere Geschichte</h2>
+                    <p>Seit unserer Gründung sind wir bestrebt, eine einladende Atmosphäre zu schaffen und unsere Gäste mit einzigartigen kulinarischen Erlebnissen zu verwöhnen.</p>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <h2 class="text-warning">Unser Team</h2>
+                    <p>Unser Team besteht aus erfahrenen und leidenschaftlichen Mitarbeitern, die stets bemüht sind, Ihnen den besten Service zu bieten.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
