--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -15,6 +15,7 @@
     
     <!-- Eigenes CSS -->
     <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/kontakt.css">
     <title>Restaurant Template</title>
 </head>
 <body>
@@ -47,6 +48,22 @@
         <div id="bg" class="h-100 w-100 position-absolute top-0 start-0"></div>
         
         <!-- Zentraler Inhalt -->
+        <div class="contact-form-container position-relative text-center text-light">
+            <h1 class="text-warning mb-4">Kontakt</h1>
+            <p>Wir freuen uns über Ihre Nachricht! Nutzen Sie das Formular unten:</p>
+            <form action="/send_email.php" method="POST" class="w-50 mx-auto mt-4">
+                <div class="mb-3">
+                    <input type="text" class="form-control" name="name" placeholder="Ihr Name" required>
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" name="email" placeholder="Ihre E-Mail-Adresse" required>
+                </div>
+                <div class="mb-3">
+                    <textarea name="message" class="form-control" rows="4" placeholder="Ihre Nachricht" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-warning">Nachricht senden</button>
+            </form>
+        </div>        
     </main>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
