added delivery page + changed nav style on all pages

--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -15,6 +15,7 @@
     
     <!-- Eigenes CSS -->
     <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/nav.css">
     <link rel="stylesheet" href="/view/kontakt.css">
     <title>Restaurant Template</title>
 </head>
