--- a/pages/ueberuns.html
+++ b/pages/ueberuns.html
@@ -15,6 +15,7 @@
     
     <!-- Eigenes CSS -->
     <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/nav.css">
     <link rel="stylesheet" href="/view/ueberuns.css">
     <title>Über uns</title>
 </head>
