--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <!-- Eigenes CSS -->
     <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/nav.css">
     <title>Restaurant Template</title>
 </head>
 <body>
