--- a/pages/speisekarte.html
+++ b/pages/speisekarte.html
@@ -18,6 +18,7 @@
     
     <!-- Eigenes CSS -->
     <link rel="stylesheet" href="/view/style.css">
+    <link rel="stylesheet" href="/view/nav.css">
     <link rel="stylesheet" href="/view/speisekarte.css">
 
     <title>Speisekarte</title>
