--- a/pages/ueberuns.html
+++ b/pages/ueberuns.html
@@ -68,7 +68,7 @@
         <div class="google-maps mt-5">
             <h2 class="text-warning mb-3">Unsere Location</h2>
             <iframe
-                src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ7eGAkZsfuEcRUgSu8TvAynQ&key=YOUR_GOOGLE_API_KEY" 
+                src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ7eGAkZsfuEcRUgSu8TvAynQ&key=AIzaSyAAxHcFc516d32Uma7lS0XYruobAwi5htg" 
                 width="100%" 
                 height="400" 
                 style="border:0;" 
